# Projet-2-Data-Engineer

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  docker-compose.yml  pyproject.toml  readme.md
CassandraDB/: cassandra.config  client.py  docker-compose.yml  importer.py  telemetry_repository.py
CassandraDB/docs/: README_Cassandra.md
CassandraDB/schema/: Schema.sql
CassandraDB/script/: check_cassandra.py  import_all.py  importer.py
CassandraDB/src/cassandradb/: client.py  telemetry_repository.py
InfluxDB/docs/: README_Influx.md
InfluxDB/query/: influxdb.py
InfluxDB/reports/: cto_reports.py
InfluxDB/scripts/: check_influxdb.py  load_csv_influx.py  simulate.py  write_sample.py
InfluxDB/src/solarmboa_influxdb/: client.py  config.py  writer.py
MongoDB/: init.js
MongoDB/aggregation/: pipeline_a_dashboard.py  pipeline_b_anomalies.py  pipeline_c_geospatial.py
MongoDB/api/: main.py
MongoDB/docs/: Readme_mondodb.md
MongoDB/queries/: hello.py  q1_audit.py  q2_audit.py  q3_audit.py  q3_health.py  q4_distributeur.py  template_base.py
MongoDB/reports/: cto_business.py
MongoDB/scripts/: benchmark.py  boostrap_database.py  check_mongo.py  create_indexes.py  create_schema_validation.py  import_all.py
MongoDB/src/solarmboa/: config.py  database.py
MongoDB/src/solarmboa/services/: cache_bridge.py  importer.py
Neo4JDB/cypher/: constraints.cypher  queries.cypher
Neo4JDB/docs/: README_NEO4J.md
Neo4JDB/reports/: cto_query.py
Neo4JDB/scripts/: apply_constraints.py  check_neo4j.py  importer.py
Neo4JDB/src/solarmboa_graph/: client.py  config.py  importer.py
Redis/: docker-compose.yml  redis.conf  redis.config
Redis/docs/: Readme_redis.md
Redis/scripts/: benchmark_cache.py
Redis/src/cache/: client.py  leaderboard.py  session_cache.py  telemetry.py
Redis/src/exercices/: ex_a_strings.py  ex_b_hashes.py  ex_c_sets.py  ex_d_sorted_sets.py  ex_e_pipeline.py  ex_f_cache_aside.py
Redis/src/utils/: data_loader.py
Redis/tests/: test_session_cache.py
api/: main.py
api/core/: config.py
api/routes/: health.py  installations.py  telemetry.py
api/schemas/: installation.py  maintenance.py  telemetry.py
api/services/: cassandra_service.py  influx_service.py  mongo_service.py  redis_service.py
cloud_aws/: architecture.md
cloud_aws/aws/: jobs.py
cloud_aws/script/: api_handler.py  lambda_function.py  s3.py
dashboard/: app.py
dashboard/pages/: cassandradb.py  influxdb.py  mongo.py  neo4.py  redis.py
datawarehouse/docs/: dimension.md
datawarehouse/scripts/: build_schema.py
datawarehouse/sql/: dimension.sql  fact.sql  queries.sql
docs/: architecture.md
notebooks/: audit-data.ipynb
