[project]
name = "solarmboa"
version = "0.1.0"
description = "architecture data + 5 data base \u001b[D\u001b[D"
authors = [
    {name = "Codeur63",email = "Codeur63@gmail.com"}
]
license = "MIT"
requires-python = "3.11"
dependencies = [
    "cassandra-driver (>=3.30.0,<4.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "pymongo (>=4.17.0,<5.0.0)",
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.48.0,<0.49.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "plotly (>=6.7.0,<7.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "neo4j (>=6.2.0,<7.0.0)",
    "redis[hiredis] (>=8.0.0,<9.0.0)"
]

[tool.poetry]
# packages = [{ include = "solarmboa", from = "src" }] 
packages = [
    { include = "cassandra", from = "CassandraDB/src" },
    { include = "src", from = "Redis" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "black (>=26.5.1,<27.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]
